--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "private": true,
   "dependencies": {
-    "vue": "^3.3.4"
+    "got": "^14.4.2",
+    "primeicons": "^7.0.0",
+    "primevue": "^3.53.0",
+    "vue": "^3.3.4",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
